# gdp-hmi

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  genivi-demo-platform-hmi.bb  git.mk
app/gdp-hmi-background/: gdp-hmi-background.bb  gdp-hmi-background.pro  main.cpp  main.qml
app/gdp-hmi-launcher/: ApplicationsModel.qml  gdp-hmi-launcher.bb  gdp-hmi-launcher.cpp  gdp-hmi-launcher.h  gdp-hmi-launcher.pro  main.cpp  main.qml  qml.qrc
app/gdp-hmi-launcher/assets/: README.images
app/gdp-hmi-launcher2/: README  gdp-hmi-launcher2.bb  gdp-hmi-launcher2.cpp  gdp-hmi-launcher2.h  gdp-hmi-launcher2.pro  gdp-hmi-launcher2.qml  main.cpp  qml.qrc
app/gdp-hmi-launcher2/content/: ContentModel.qml  ListItem.qml  NMapEffect.qml  NMapLightSource.qml  PowerOffItem.qml
app/gdp-hmi-launcher2/protocol/dbus/: gdp-hmi-introspect.xml
app/gdp-hmi-panel/: gdp-hmi-panel.bb  gdp-hmi-panel.cpp  gdp-hmi-panel.h  gdp-hmi-panel.pro  main.cpp  main.qml
app/qml-example/: main.cpp  main.h  main.qml  qml-example.bb  qml-example.pro
assets/: Makefile.am
doc/: Makefile.am
doc/doxygen/: Makefile.am  genivi-demo-platform-hmi.doxygen.in
include/: gdp-dbus-service.h  gdp-dbus-systemd.h  gdp-hmi-apps.h  gdp-hmi-surfaces.h
protocol/: Makefile.am
protocol/dbus/: Makefile.am  gdp-hmi-introspect.xml  systemd-login1.xml  systemd-systemd1.xml
src/: Makefile.am  gdp-dbus-service.cpp  gdp-dbus-systemd.cpp  gdp-hmi-controller.c  gdp-hmi-controller.cpp
